--- a/website/index.html
+++ b/website/index.html
@@ -55,7 +55,7 @@
             <h1>JENSEN byder velkommen til alle gamers!</h1>
             <h2>Spiller du computerspillet Descenders? Kunne du tænke dig at prøve det i virkeligheden? Her er de bedste budget mountainbikes på markedet!</h2>
             
-            <button class="main_btn"><a href="/"> Se dem her </a> </button>
+            <button class="main_btn"><a href="/product.html"> Se dem her </a> </button>
         </div>
         <div class="main_img-container">
             <img src="images/rockhopper.png" style='width:100%;' alt="biking" id="main_img_biking">
